--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="OR">or</string>
     <string name="title_activity_fragment_container">Hjem</string>
     <string name="title_home">Hjem</string>
-    <string name="title_search">Søg</string>
+    <string name="title_calendar">Kalender</string>
     <string name="title_profile">Profil</string>
     <string name="create">Opret</string>
     <string name="filter">Filter</string>
