added: pitch to CreateEventActivity.kt fixed: PitchModel.kt
Took 31 minutes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="when">Hvornår</string>
     <string name="back">Tilbage</string>
     <string name="your_calendar">Din kalender</string>
+    <string name="vælg_bane">Vælg en bane</string>
 </resources>
