--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="forgot_psw">Glemt adgangskode?</string>
     <string name="full_name">Fulde navn</string>
     <string name="phonenumber">Telefonnummer</string>
+    <string name="reset_password">Reset adgangskode</string>
 </resources>
