--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,7 @@
     <string name="back">Tilbage</string>
     <string name="your_calendar">Din kalender</string>
     <string name="vælg_bane">Vælg en bane</string>
+    <string name="join">tilslut</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
