Removed current indicators of dividers in homfragment to make way for new dividers

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="description_of_event">Beskriv dit event</string>
     <string name="when">Hvornår</string>
     <string name="back">Tilbage</string>
-    <string name="your_calendar">Din kalender</string>
+    <string name="your_calendar">Dine Tilmeldinger</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
