Update event, show event created by user
Co-Authored-By: irisswt <70897754+irisswt@users.noreply.github.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,9 @@
     <string name="wrong_password">Forkert adgangskode! Prøv igen!</string>
     <string name="fail_update_phonenumber">Fejl ved opdatering af telefonnummer</string>
     <string name="fail_update_email">Fejl ved opdatering af Email</string>
+    <string name="admin_event">Administre event</string>
+    <string name="admin_events">Administrer events</string>
+    <string name="back_button">Tilbage</string>
+    <string name="create_event">Opret Event</string>
+    <string name="update_event">Opdater event</string>
 </resources>
