--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,7 @@
     <string name="vælg_bane">Vælg en bane</string>
     <string name="join">tilslut</string>
     <string name="home_today_text">I Dag:</string>
-    <string name="home_upcoming_text">Upcoming:</string>
+    <string name="home_upcoming_text">Kommende:</string>
     <string name="home_empty_text">You have no events</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
