--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">NemSport</string>
-    <string name="login">Log In</string>
-    <string name="register">Sign Up</string>
-    <string name="username">Username</string>
+    <string name="login">Log Ind</string>
+    <string name="register">Tilmeld</string>
+    <string name="username">Brugernavn</string>
     <string name="password">Password</string>
     <string name="OR">or</string>
     <string name="title_activity_fragment_container">Hjem</string>
@@ -10,13 +10,11 @@
     <string name="title_calendar">Kalender</string>
     <string name="title_profile">Profil</string>
     <string name="create">Opret</string>
-    <string name="filter">Filter</string>
+    <string name="filter">Filtrer</string>
     <string name="menu">Menu</string>
     <string name="your_events">Dine events</string>
     <string name="today">I dag</string>
     <string name="tomorrow">I morgen</string>
-    <string name="register_guest">Sign Up som gæst</string>
-    <string name="register_member">Sign Up som medlem</string>
     <string name="mail">Email</string>
     <string name="participate">Tilmeldt!</string>
     <string name="title_activity_create_event">Opret event</string>
@@ -26,18 +24,11 @@
     <string name="back">Tilbage</string>
     <string name="your_calendar">Din kalender</string>
     <string name="title_activity_login">LoginActivity</string>
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">"Welcome !"</string>
-    <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
-    <string name="login_failed">"Login failed"</string>
+    <string name="invalid_password">Kodeord skal være 6 eller flere karakterer lang</string>
     <string name="forgot_psw">Glemt adgangskode?</string>
     <string name="full_name">Fulde navn</string>
     <string name="phonenumber">Telefonnummer</string>
-    <string name="reset_password">Reset adgangskode</string>
+    <string name="reset_password">Nulstil adgangskode</string>
     <string name="vælg_bane">Vælg en bane</string>
     <string name="join">tilslut</string>
     <string name="userpage_phone">Telefonnummer:</string>
@@ -58,8 +49,8 @@
     <string name="book_field_time">"vælg tidspunkt"</string>
     <string name="home_today_text">I Dag:</string>
     <string name="home_upcoming_text">Kommende:</string>
-    <string name="home_empty_text">You have no events</string>
-    <string name="admin_event">Administre event</string>
+    <string name="home_empty_text">Ingen events</string>
+    <string name="admin_event">Administrer event</string>
     <string name="admin_events">Administrer events</string>
     <string name="back_button">Tilbage</string>
     <string name="create_event">Opret Event</string>
