--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="mail">Email</string>
     <string name="participate">Tilmeldt!</string>
     <string name="title_activity_create_event">Opret event</string>
-    <string name="team_name">Holdnavn</string>
+    <string name="team_name">Event navn</string>
     <string name="description_of_event">Beskriv dit event</string>
     <string name="when">Hvornår</string>
     <string name="back">Tilbage</string>
