fix name from NemSport to C2-NemSport
Signed-off-by: louismonty <louis.mail.dk@gmail.com>

Took 12 minutes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">NemSport</string>
+    <string name="app_name">C2-NemSport</string>
     <string name="login">Log Ind</string>
     <string name="register">Tilmeld</string>
     <string name="username">Brugernavn</string>
